# File_syncing_tool

./: .gitignore  CMakeLists.txt  FileSearch.cpp  FileSearch.h  README.md  compare.cpp  compare.h  lan_filesync.exp  lan_filesync.lib  main.cpp  server.cpp  server.h  snapshot.h
winui/: LanFileSync.WinUI.sln
winui/LanFileSync.WinUI/: App.xaml  App.xaml.cs  LanFileSync.WinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
winui/LanFileSync.WinUI/Converters/: InverseBooleanConverter.cs
winui/LanFileSync.WinUI/Models/: AppSettings.cs  LogEntry.cs
winui/LanFileSync.WinUI/Properties/: launchSettings.json
winui/LanFileSync.WinUI/Services/: AppServices.cs  AppState.cs  BackendProcessService.cs  FolderPickerService.cs  LogStore.cs  SettingsService.cs
winui/LanFileSync.WinUI/ViewModels/: ObservableObject.cs
winui/LanFileSync.WinUI/Views/: DashboardPage.xaml  DashboardPage.xaml.cs  LogsPage.xaml  LogsPage.xaml.cs  ServePage.xaml  ServePage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  SyncPage.xaml  SyncPage.xaml.cs
